Thursday, April 04 2002, James Turner

	* Comitted Ron Steinke's polling changes. These add a new
	  class (Poll), which is an abstract polling interface
	  by the connections. A default implementation is supplied,
	  which simple calls 'select()': to retain the current Eris
	  behaviour, simple replace Connection::poll(), Meta::poll()
	  and Timeout::pollAll() with a single call to
	  Eris::PollDefault::poll() (defined in Eris/PollDefault.h).
	  If you're using Gtk+ or some other widget set that provides
	  idle and input notifications, then you can write your
	  own Poll subclass (or steal one: Ron already has a Gtk+
	  implementation!) and everything will work.

Friday, March 15 2002, James Turner

	* Fixed logic in setContainerById, when the parent was
	  already defined: was doing 'setContainer(this)' which
	  is clearly nonsense.
	* Added in / corrected lots of debugging stuff

Tuesday, March 12 2002, James Turner

	* Fix for #222 - made logic in BaseConnection more robust
	  in handling unusual cases / states. If there are other
	  ways to 'wedge' the connections, please let me know.
	* Fix for #216 - logic in World::recvSightDelete to fix
	  container ship of visible contents
	* Preliminary work / re-factoring for #217 : added 
	  setContents helper to Entity, and handle that case
	  in setProperty.

Sunday, March 10 2002, James Turner

	* Set a default orientation on Entities, to avoid some
	  nasty behaviour that Simon was seeing. Set w=1, x/y/z=0.

Friday, March 08 2002, James Turner

	* Fixed .so version information. Thanks to Damien for the
	  motivation, and Ron Steinke for showing me how.

Thursday, March 07 2002, James Turner

	* Changed delay on select() to be 0,0 : previously it was
	  10 milliseconds, which is a bit harsh on the clients.
	* Changed World::recvSightMove to use the ID argument of
	  the Move operation, instead of it's FROM. This should
	  fix reporting of pick/drop ops. Both these fixes
	  are suggested by Al Riddoch.
